<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:id="@+id/input1"
        android:hint="@string/input_1"
        android:inputType="number"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:id="@+id/input2"
        android:hint="@string/input_2"
        android:inputType="number"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/result"/>

    <Button
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:id="@+id/add"
        android:text="@string/add"/>

    <Button
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:id="@+id/subtract"
        android:text="@string/subtract"/>

    <Button
        android:layout_width="110dp"
        android:layout_height="50dp"
        android:id="@+id/multiply"
        android:text="@string/multiply"/>

    <Button
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:id="@+id/divide"
        android:text="@string/divide"/>

</androidx.appcompat.widget.LinearLayoutCompat>